# final_project

./: .gitignore  README.md  TASKS.md  data_loader.py  main.py  plugin_loader.py  pyproject.toml
data/runs/run_001/: output.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
project_root/src/: logger_manager.py  registry_manager.py
src/api/: deps.py  main.py  models.py
src/app/: analysis_service.py  context.py  dto.py  exceptions.py  recipe_service.py
src/core/: analysis.py  analysis_categorical.py  analysis_descriptive.py  analysis_group_box_plot.py  analysis_missing_values.py  analysis_python.py  analysis_runner.py  analysis_shell.py  analysis_test.py  analysis_test_michal.py  analysis_test_yoad.py  analysis_test_yotam.py  artifacts.py  data_loader.py  history_window.py  logger_manager.py  main.py  pipeline_runner.py  plugin_loader.py  recipe.py  registry_manager.py  registry_reader.py  run.py  run_executor.py  try.py  user_code.py  user_code_reader.py
src/storage/: __init__.py  analysis_repository.py  artifacts.py  recipe_repository.py  registry.py  run_repository.py  storage_manager.py
src/tests/: test_analysis_categorical.py  test_analysis_correlation_plot.py  test_analysis_descriptive.py  test_analysis_distribution_plot.py  test_analysis_group_box_plot.py  test_analysis_group_comparison.py  test_analysis_missing_values.py  test_analysis_range_comparison.py  test_analysis_runner.py  test_data_loader.py  test_python_analysis.py  test_user_code_reader.py
(+56 files in other folders)
