[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "Final project"
requires-python = ">=3.13"

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
venvPath = "."
typeCheckingMode = "basic"
pythonVersion = "3.13"
